--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div id="content">Warehouse: This will display your warehouse information.</div>
 
     <div id="navbar">
-        <button class="nav-button" onclick="showTab('warehouse', this)">Warehouse</button>
+        <button class="nav-button" onclick="showTab('warehouse', this)">Slot</button>
         <button class="nav-button" onclick="showTab('tasks', this)">Tasks</button>
         <button class="nav-button" onclick="showTab('game', this)">Game</button>
         <button class="nav-button" onclick="showTab('market', this)">Market</button>
